<resources>
    <string name="app_name">Crash Kit</string>
    <string name="login_title">Login</string>
    <string name="main_title">crash kit</string>
    <string name="register_title">Register</string>
    <string name="home_title">Welcome</string>
    <string name="home_new_statement_card_title">New statement</string>
    <string name="home_share_insurance_card_title">Share insurance information</string>
    <string name="profile_title">Profile</string>
    <string name="profile_personal_card_title">Personal Information</string>
    <string name="profile_insurance_card_title">Insurance Information</string>
    <string name="new_statement_title">Accident Statement</string>
    <string name="statement_material_damage_title">Material Damage</string>
    <string name="statement_witness_title">Witness</string>
    <string name="statement_vehicle_a_title">Vehicle A</string>
    <string name="motor_title">Motor</string>
    <string name="trailer_title">Trailer</string>
    <string name="statement_insurance_company_title">Insurance Company</string>
    <string name="statement_insurance_agency_title">Insurance Agency</string>
    <string name="statement_policy_holder_title">Policy Holder</string>
    <string name="statement_vehicle_title">Vehicle</string>
    <string name="statement_motor_title">Motor</string>
    <string name="statement_driver_title">Driver</string>
    <string name="statement_vehicle_b_title">Vehicle B</string>
    <string name="share_insurance_information_title">Share insurance information</string>
    <string name="statement_circumstances_title">Circumstances</string>
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="label_first_name">First Name</string>
    <string name="label_last_name">Last Name</string>
    <string name="label_confirm_password">Confirm Password</string>
    <string name="label_date_of_accident">Date of Accident</string>
    <string name="label_location">Location</string>
    <string name="label_material_damage">Material Damage:</string>
    <string name="label_witness">Witness:</string>
    <string name="label_phone_number">Phone Number</string>
    <string name="label_address">Address</string>
    <string name="label_policy_number">Policy Number</string>
    <string name="label_green_card_number">Green Card Number</string>
    <string name="label_insurance_cert_availability_date">Insurance Cert. Availability Date</string>
    <string name="label_insurance_cert_expiration_date">Insurance Cert. Expiration Date</string>
    <string name="label_country">Country</string>
    <string name="label_postal_code">Postal Code</string>
    <string name="label_mark_type">Mark, Type</string>
    <string name="label_registration_number">Registration Number</string>
    <string name="label_country_of_registration">Country of Registration</string>
    <string name="label_point_of_impact">Point of Impact</string>
    <string name="label_photo">Photo</string>
    <string name="label_remarks">Remarks</string>
    <string name="label_visible_damage_description">Visible damage description</string>
    <string name="label_date_of_birth">Date of Birth</string>
    <string name="label_driving_license_number">Driving License Number</string>
    <string name="label_driving_license_expiration_date">Driving License Expiration Date</string>
    <string name="label_amount_of_crosses">Amount of Crosses</string>
    <string name="label_accident_sketch">Accident Sketch:</string>
    <string name="label_other_objects">Other Objects</string>
    <string name="label_other_cars">Other Cars</string>
    <string name="label_injured">Injured</string>
    <string name="label_pick_date">Pick Date</string>
    <string name="label_driving_license_category">Driving License Category</string>
    <string name="label_new_password">New Password</string>
    <string name="label_confirm_new_password">Confirm New Password</string>
    <string name="label_login_forgot_password">Forgot Password?</string>
    <string name="main_register_button">Register</string>
    <string name="main_guest_button">Continue as guest</string>
    <string name="statement_track_location_button">Track Location</string>
    <string name="statement_back_button">Previous</string>
    <string name="statement_front_button">Next</string>
    <string name="import_insurance_information_button">Import own Insurance information</string>
    <string name="add_trailer_button">Add Trailer</string>
    <string name="remove_trailer_button">Remove Trailer</string>
    <string name="share_insurance_generate_qr_code_button">Generate QR-Code</string>
    <string name="profile_change_insurance_button">Change Insurance</string>
    <string name="import_other_insurance_information_button">Import other driver insurance information</string>
    <string name="take_picture_button">Take Picture</string>
    <string name="search_shape_button">Search Shape</string>
    <string name="delete_shape_button">Delete Shape</string>
    <string name="change_address_button">Change Address</string>
    <string name="see_circumstances_button">See circumstances</string>
    <string name="edit_sketch_button">Edit Sketch</string>
    <string name="edit_button">Edit</string>
    <string name="cancel_button">Cancel</string>
    <string name="update_button">Update</string>
    <string name="remove_button">Remove</string>
    <string name="submit_button">Submit</string>
    <string name="logout_button">Logout</string>
    <string name="proceed_button">Proceed</string>
    <string name="revert_button">Revert</string>
    <string name="forgot_credentials_password">Reset Password</string>
    <string name="main_description">Save time and hassle after a crash</string>
    <string name="home_new_statement_card_description">Create a new accident statement</string>
    <string name="home_share_insurance_card_description">Generate a QR-code which contains your insurance information</string>
    <string name="main_share_insurance_card_image_description">Person scanning QR-code with phone</string>
    <string name="home_new_statement_card_image_description">Photo of a black insurance statement</string>
    <string name="statement_insurance_description">(see insurance certificate)</string>
    <string name="statement_driver_description">(see driving license)</string>
    <string name="share_insurance_qr_code_description">Scan this QR-code with another driver’s phone to share your insurance details instantly.</string>
    <string name="trailer_under_750kg_description">Trailers weighing less than 750kg don’t require registration</string>
    <string name="warning_email_required">Email is required!</string>
    <string name="warning_password_required">Password is required!</string>
    <string name="password_no_uppercase">Password must contain at least one uppercase letter.</string>
    <string name="password_no_lowercase">Password must contain at least one lowercase letter.</string>
    <string name="password_no_special_character">Password must contain at least one special character.</string>
    <string name="password_whitespace">Password must not contain any whitespace.</string>
    <string name="password_too_short">Password must be at least 6 characters long.</string>
    <string name="passwords_not_the_same">Passwords are not the same!</string>
    <string name="password_no_digits">Password must contain at least one digit.</string>
    <string name="field_required">Field is required</string>
    <string name="no_digits_allowed">No digits allowed</string>
    <string name="no_letters_allowed">No letters allowed</string>
    <string name="field_needs_characters">Field needs certain characters:</string>
    <string name="future_date">Date is in the future</string>
    <string name="past_date">Date is in the past</string>
    <string name="invalid_email">Invalid email</string>
    <string name="error_network">A network error occurred. Please try again.</string>
    <string name="unknown_error">An unknown error occurred. Please try again.</string>
    <string name="error">Error</string>
    <string name="qr_code_generation_failed">Failed to generate QR code. Please try again.</string>
    <string name="policy_holder_profile_not_found">Unable to fetch profile information. Please try again later.</string>
    <string name="update_policy_holder_personal_information_failed">Unable to update personal information. Please try again later.</string>
    <string name="update_policy_holder_insurance_information_failed">Unable to update insurance information. Please try again later.</string>
    <string name="login_remember_checkbox">Remember Me</string>
    <string name="statement_injured_checkbox">Injured</string>
    <string name="statement_material_damage_other_vehicles_checkbox">Other vehicles than vehicle A and B</string>
    <string name="statement_material_damage_other_than_vehicles_checkbox">Objects other than vehicles</string>
    <string name="no_witness_checkbox">No Witness</string>
    <string name="no_motor_checkbox">No Motor</string>
    <string name="trailer_needs_registration_checkbox">Trailer is over 750kg (has registration)</string>
    <string name="driver_is_policy_holder_checkbox">Driver is policy holder</string>
    <string name="material_damage_covered_checkbox">Material Damage Covered</string>
    <string name="parked_stopped_checkbox">Parked/Stopped</string>
    <string name="leaving_parking_place_opening_the_door_checkbox">Leaving a parking place/ opening the door</string>
    <string name="entering_parking_place_checkbox">Entering a parking place</string>
    <string name="emerging_car_park_private_ground_track_checkbox">Emerging from a car park, from private ground, from a track</string>
    <string name="entering_car_park_private_ground_track_checkbox">Entering a car park, private ground, a track</string>
    <string name="entering_roundabout_checkbox">Entering a roundabout</string>
    <string name="circulating_roundabout_checkbox">Circulating a roundabout</string>
    <string name="striking_rear_while_same_direction_same_lane_checkbox">Striking the rear of the other vehicle while going in the same direction and in the same lane</string>
    <string name="going_same_direction_in_different_lane_checkbox">Going in the same direction but in a different lane</string>
    <string name="changing_lanes_checkbox">Changing lanes</string>
    <string name="overtaking_checkbox">Overtaking</string>
    <string name="turning_right_checkbox">Turning to the right</string>
    <string name="turning_left_checkbox">Turning to the left</string>
    <string name="reversing_checkbox">Reversing</string>
    <string name="encroaching_lane_reserved_circulation_opposite_direction_checkbox">Encroaching on a lane reserved for circulation in the opposite direction</string>
    <string name="coming_the_right_road_junction_checkbox">Coming from the right (at road junction)</string>
    <string name="not_observed_right_way_sign_red_light_checkbox">Had not observed a right of way sign or a red light</string>
    <string name="is_trailer_checkbox">Is Trailer</string>
    <string name="name">Name</string>
    <string name="company_name">Company Name:</string>
    <string name="agency_name">Agency Name:</string>
    <string name="accident_sketch_change_address_dialog">Enter Address</string>
    <string name="insurance_certificate_new_dialog">Create a new certificate</string>
    <string name="insurance_certificate_select_dialog">Select an insurance certificate</string>
    <string name="policy_holder_profile_fetch_failed">An error occurred while retrieving your profile information. Please try again.</string>
    <string name="accident_statement_submission_failed">An error occurred while submitting accident statement. Please try again.</string>
    <string name="accident_statement_created">Accident statement successfully created!</string>
    <string name="date_range_picker_title">Select dates</string>
</resources>