<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sv_statement_vehicle_a_miscellaneous"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tertiary400">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/tertiary400"
        tools:context=".fragments.statement.vehicle_a.VehicleAMiscellaneousFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/tv_statement_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:layout_marginBottom="16dp"
                android:text="@string/new_statement_title"
                android:textAllCaps="true"
                android:textColor="@color/title"
                android:textSize="35sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/tv_statement_vehicle_a_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/statement_vehicle_a_title"
                android:textAllCaps="true"
                android:textColor="@color/primary800"
                android:textSize="35sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/border_outlined_blue"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/label_point_of_impact"
                    android:textAllCaps="true"
                    android:textColor="@color/primary800"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <com.inetum.realdolmen.crashkit.fragments.statement.PointOfImpactSketch
                    android:id="@+id/poi_vehicle_a_sketch"
                    android:layout_width="match_parent"
                    android:background="@color/white"
                    android:layout_height="250dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/label_photo"
                    android:textAllCaps="true"
                    android:textColor="@color/primary800"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_statement_accident_picture"
                    style="@style/PrimaryRoundedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20sp"
                    android:layout_marginBottom="16dp"
                    android:paddingLeft="65dp"
                    android:paddingRight="65dp"
                    android:text="@string/take_picture_button"
                    tools:ignore="ButtonStyle" />

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/vp_statement_vehicle_a_accident_photos"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:visibility="gone" />


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="12dp"
                    android:hint="@string/label_remarks"
                    app:boxBackgroundColor="@color/input_field_background"
                    app:boxStrokeColor="@color/primary800">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_statement_vehicle_a_driver_remarks"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/input_hint" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="12dp"
                    android:hint="@string/label_visible_damage_description"
                    app:boxBackgroundColor="@color/input_field_background"
                    app:boxStrokeColor="@color/primary800">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_statement_vehicle_a_damage_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/input_hint" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:paddingBottom="12dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_statement_accident_previous"
                    style="@style/SecondaryRoundedButton"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="20dp"
                    android:paddingLeft="65dp"
                    android:paddingRight="65dp"
                    android:text="@string/statement_back_button"
                    tools:ignore="ButtonStyle" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_statement_accident_next"
                    style="@style/PrimaryRoundedButton"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:paddingLeft="65dp"
                    android:paddingRight="65dp"
                    android:text="@string/statement_front_button"
                    tools:ignore="ButtonStyle" />

            </LinearLayout>

        </LinearLayout>
    </FrameLayout>
</ScrollView>