<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ShareInsuranceInformationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/tertiary400"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/tv_share_insurance_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:gravity="center"
            android:text="@string/share_insurance_information_title"
            android:textAllCaps="true"
            android:textColor="@color/title"
            android:textSize="36sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_share_insurance_generate_qr_code"
            style="@style/PrimaryRoundedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_main_button"
            android:paddingLeft="65dp"
            android:paddingTop="20dp"
            android:paddingRight="65dp"
            android:paddingBottom="20dp"
            android:text="@string/share_insurance_generate_qr_code_button"
            android:textSize="24sp"
            tools:ignore="ButtonStyle" />

        <ImageView
            android:id="@+id/iv_share_insurance_qr_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:visibility="gone"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_share_insurance_qr_code_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/share_insurance_qr_code_description"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="gone" />
    </LinearLayout>


</FrameLayout>